--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
               >
                 <i class="fa-solid fa-bolt flex-shrink-0"></i>
                 <div>
-                  <h4><a href="" class="stretched-link">Electrical Work</a></h4>
+                  <h4><a href="service-details.html#electrical-system-details" class="stretched-link">Electrical Work</a></h4>
                   <p>
                     We provide expert electrical work, including installation,
                     maintenance, and repair of wiring, lighting, and power
@@ -550,7 +550,7 @@
                 <i class="fa-solid fa-fire-flame-curved flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="" class="stretched-link">Fire Safety Systems</a>
+                    <a href="service-details.html#fire-system-details" class="stretched-link">Fire Safety Systems</a>
                   </h4>
                   <p>
                     We offer comprehensive fire safety systems, including
@@ -568,7 +568,7 @@
               >
                 <i class="fas fa-snowflake flex-shrink-0"></i>
                 <div>
-                  <h4><a href="" class="stretched-link">HVAC Works</a></h4>
+                  <h4><a href="service-details.html#hvax-system-details" class="stretched-link">HVAC Works</a></h4>
                   <p>
                     We deliver comprehensive HVAC works, focusing on system
                     design, optimization, ductwork, and climate control for
@@ -586,7 +586,7 @@
                 <i class="fa-solid fa-wrench flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="" class="stretched-link"
+                    <a href="service-details.html#plumbing-drainage-details" class="stretched-link"
                       >Plumbing & Drainage Work</a
                     >
                   </h4>
@@ -606,7 +606,7 @@
                 <i class="fa-solid fa-broom flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="" class="stretched-link"
+                    <a href="service-details.html#cleaning-soft-details" class="stretched-link"
                       >Cleaning & Soft Service</a
                     >
                   </h4>
@@ -637,7 +637,7 @@
                 <i class="fas fa-cogs flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="" class="stretched-link"
+                    <a href="service-details.html#communication-safety-details" class="stretched-link"
                       >ELV & Control System Work</a
                     >
                   </h4>
@@ -658,7 +658,7 @@
                 <i class="fas fa-drafting-compass flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="" class="stretched-link">MED Design & Drafting</a>
+                    <a href="service-details.html#deisgn-service-details" class="stretched-link">MED Design & Drafting</a>
                   </h4>
                   <p>
                     We provide MED design and drafting services, including
@@ -697,7 +697,7 @@
                 <i class="fas fa-hard-hat flex-shrink-0"></i>
                 <div>
                   <h4>
-                    <a href="" class="stretched-link">Civil & Fitout Works</a>
+                    <a href="service-details.html#civil-work-details" class="stretched-link">Civil & Fitout Works</a>
                   </h4>
                   <p>
                     We manage civil and fitout works, covering structural
