--- a/service-details.html
+++ b/service-details.html
@@ -149,7 +149,7 @@
           class="container position-relative d-flex flex-column align-items-center"
           data-aos="fade"
         >
-          <h2>Service Details</h2>
+          <h2 class="service-details-header-title">Service Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Service Details</li>
