class missing issue

--- a/service-details.html
+++ b/service-details.html
@@ -158,7 +158,7 @@
 
       <!-- ======= Service Details Section ======= -->
 
-      <section id="service-details-section" style="padding-top: 50px">
+      <section id="service-details-section" style="padding-top: 50px" class="service-details-section-class">
         <div class="container">
           <div
             id="deisgn-service-details"
