--- a/service-details.html
+++ b/service-details.html
@@ -7,7 +7,12 @@
     <title>UpConstruction Bootstrap Template - Service Details</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
-
+    <meta name="title" content="AL AFZAH GROUP WILL">
+    <meta name="description" content="Al Afzah Group builds trust through quality work. Our commitment to excellence ensures reliable, innovative results, creating lasting client relationships based on transparency and integrity.">
+    <meta name="keywords" content="AL AFZAH TRADING, CONTRACTING & CLEANING W.L.L, drafting, designing, shop drawings, as built drawings, engineering calculations, heat load calculation, ESP calculation, pump head calculation, pipe size calculation, duct size calculation, lux calculation, electrical load calculation, equipment calculation, electrical system, LV, small power, switch, socket, isolator, electrical panel, LV panel, CUTOUT panel, MS-B panel, SMSB panel, BD panel, MCC panel, ATS panel, UPS, transformers, cabling, containments, conduits, cable tray, trunking, lighting, internal lighting, external lighting, ELV, CCTV, security systems, PAVA, access control, field instruments, fire alarm system, FO cabling, splicing, building management system, Kahramaa approval, fire safety system, fire sprinklers, fire hose reels, preventive maintenance, FM200, deluge systems, communication, security, data commissioning, HVAC system, chilled water system, ventilation fans, ducting, noise control, air balancing, water balancing, plumbing, drainage systems, sewage management, water supply, sanitary fixtures, luxury baths, water heaters, civil works, road maintenance, structural foundations, concrete work, civil fit out works, gypsum board, stainless steel, glass, cleaning services, housekeeping, janitorial services, deep cleaning, disinfection services.">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
