--- a/service-details.html
+++ b/service-details.html
@@ -88,7 +88,7 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li class="dropdown">
-              <a href="#"
+              <a href="#" class="active"
                 ><span>Service Details</span>
                 <i class="bi bi-chevron-down dropdown-indicator"></i
               ></a>
